force-app/main/default/objects/ContactoObra__c/ContactoObra__c.object-meta.xml
<CustomObject>
    <label>Contacto de Obra</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Número de Contacto de Obra</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contactos de Obra</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>