force-app/main/default/objects/ContactoObra__c/fields/ContactoCliente__c.field-meta.xml
<CustomField>
    <fullName>ContactoCliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto de Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contactos de Obra</relationshipLabel>
    <relationshipName>ContactosObra</relationshipName>
    <type>Lookup</type>
</CustomField>