force-app/main/default/objects/ContactoObra__c/fields/ContactoProspecto__c.field-meta.xml
<CustomField>
    <fullName>ContactoProspecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto de Prospecto</label>
    <referenceTo>contactoProspecto__c</referenceTo>
    <relationshipLabel>Contactos de Obra</relationshipLabel>
    <relationshipName>ContactosObra</relationshipName>
    <type>Lookup</type>
</CustomField>