force-app/main/default/objects/ContactoObra__c/fields/NombreContacto__c.field-meta.xml
<CustomField>
    <fullName>NombreContacto__c</fullName>
    <formula>IF(ISBLANK(ContactoCliente__c), ContactoProspecto__r.Name,  ContactoCliente__r.FirstName + &apos; &apos; + ContactoCliente__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Contacto</label>
    <type>Text</type>
</CustomField>