force-app/main/default/objects/ContactoObra__c/fields/NombreCuentaProspecto__c.field-meta.xml
<CustomField>
    <fullName>NombreCuentaProspecto__c</fullName>
    <formula>IF(ISBLANK(ContactoCliente__c), ContactoProspecto__r.prospecto__r.FirstName &amp; &quot; &quot; &amp; ContactoProspecto__r.prospecto__r.LastName,  ContactoCliente__r.Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Cuenta / Prospecto</label>
    <type>Text</type>
</CustomField>