force-app/main/default/objects/ContactoObra__c/fields/NombreObra__c.field-meta.xml
<CustomField>
    <fullName>NombreObra__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nombre de Obra</label>
    <referenceTo>Obra__c</referenceTo>
    <relationshipLabel>Contactos de Obra</relationshipLabel>
    <relationshipName>ContactosObra</relationshipName>
    <type>Lookup</type>
</CustomField>