force-app/main/default/objects/ContactoObra__c/fields/TipoContacto__c.field-meta.xml
<CustomField>
    <fullName>TipoContacto__c</fullName>
    <formula>IF(ISBLANK(ContactoCliente__c),&apos;Contacto de Prospecto&apos;,&apos;Contacto de Cliente&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Contacto</label>
    <type>Text</type>
</CustomField>