force-app/main/default/objects/ContactoObra__c/validationRules/ContactoUnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactoUnico</fullName>
    <active>true</active>
    <description>Valida que un contacto de obra sólo puede tener relación a un tipo de contacto</description>
    <errorConditionFormula>AND(NOT(ISBLANK(ContactoCliente__c)),NOT(ISBLANK(ContactoProspecto__c)))</errorConditionFormula>
    <errorMessage>Sólo debe relacionar a un tipo de contacto</errorMessage>
</ValidationRule>