force-app/main/default/objects/ContactoObra__c/validationRules/IngresoIncompleto.validationRule-meta.xml
<ValidationRule>
    <fullName>IngresoIncompleto</fullName>
    <active>true</active>
    <description>Valida que no es posible guardar el registro si no está por lo menos un campo de contacto lleno</description>
    <errorConditionFormula>AND(ISBLANK(ContactoCliente__c),ISBLANK(ContactoProspecto__c))</errorConditionFormula>
    <errorMessage>Debe ingresar un Contacto relacionado a la Obra</errorMessage>
</ValidationRule>